--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -109,17 +109,23 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ANR-NM-PaU">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="D4P-vM-nAA" secondAttribute="trailing" constant="20" id="8Z4-G7-pXU"/>
+                            <constraint firstItem="ANR-NM-PaU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BoL-zD-W9v"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="D4P-vM-nAA" secondAttribute="bottom" id="htY-Ay-A7G"/>
+                            <constraint firstItem="ANR-NM-PaU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nE4-qH-FGw"/>
                             <constraint firstItem="D4P-vM-nAA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="pvB-xf-1eL"/>
                             <constraint firstItem="D4P-vM-nAA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uK7-Zd-iJb"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="ANR-NM-PaU" id="vT5-h5-Upd"/>
                         <outlet property="counterLabel" destination="45b-Hf-hrK" id="juc-pw-mvJ"/>
                         <outlet property="imageView" destination="ZM0-Qu-LEL" id="4NM-ld-S93"/>
                         <outlet property="textLabel" destination="FZ5-I0-bx1" id="gQ2-EV-pjR"/>
